<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.MainActivity">


    <!--<LinearLayout
        android:id="@+id/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.App.AppBarOverlay">

        <!--<TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/efab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
            android:backgroundTint="@color/colorPrimary"
            app:icon="@android:drawable/ic_input_add"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorFabAccent"
            android:visibility="gone"
            app:backgroundTint="@color/colorFabAccent"
            app:layout_constraintBottom_toTopOf="@+id/efab_add"
            app:layout_constraintEnd_toEndOf="@+id/efab_add"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/text_addDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/device"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/fab_addDevice"
            app:layout_constraintEnd_toStartOf="@+id/fab_addDevice"
            app:layout_constraintTop_toTopOf="@+id/fab_addDevice" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_addDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/colorFabAccent"
            android:visibility="gone"
            app:backgroundTint="@color/colorFabAccent"
            app:layout_constraintBottom_toTopOf="@+id/fab_addDevice"
            app:layout_constraintEnd_toEndOf="@+id/fab_addDevice"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/text_addDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/driver"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/fab_addDriver"
            app:layout_constraintEnd_toStartOf="@+id/fab_addDriver"
            app:layout_constraintTop_toTopOf="@+id/fab_addDriver" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="150dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_pttDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/no_device" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pttDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_device" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_driver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_pttDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/no_driver" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pttDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_driver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_pttDeviceAutoConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_connect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_pttDeviceAutoReconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_reconnect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_ptt_down_key_delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_ptt_down_key_delay_ms" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_pttDevicePttDownKeyDelay"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:digits="0123456789"
                android:inputType="number"
                android:labelFor="@id/label_ptt_down_key_delay"
                android:maxLength="5"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/label_ptt_down_key_delay_units"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_unit_ms" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/label_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_status" />

            <TextView
                android:id="@+id/label_status_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="" />

        </LinearLayout>

    </LinearLayout>

    <!--<RelativeLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
