<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_margin="30dp"
    android:orientation="vertical">


    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:alignContent="center"
        app:flexWrap="nowrap">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:flexWrap="nowrap"
            app:alignItems="flex_start"
            app:layout_alignSelf="stretch">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:alignContent="flex_start">

                <TextView
                    android:id="@+id/editdriver_label_pttDriver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/label_driver" />


                <TextView
                    android:id="@+id/editdriver_label_pttDriverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_driver"
                    android:paddingTop="10dp"
                    app:layout_alignSelf="stretch" />

            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>


        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:flexWrap="nowrap"
            app:alignItems="flex_end"
            app:layout_alignSelf="flex_end" >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/editdriver_button_pttDriver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_driver" />

        </com.google.android.flexbox.FlexboxLayout>

    </com.google.android.flexbox.FlexboxLayout>

</LinearLayout>